--- a/package.json
+++ b/package.json
@@ -21,17 +21,11 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/react-modal": "^3.13.1",
-    "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
