Исправлено имя проекта

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dima_learn_ts",
+  "name": "practice-js",
   "version": "1.0.0",
   "description": "Project react app",
   "private": "true",
