--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Alekseev K.A.",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.25.0",
+    "axios": "1.6.7",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,7 +42,7 @@
     "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": ">=4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -62,7 +62,7 @@
     "typescript": "4.5.5",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.3",
-    "webpack": "^5.66.0",
+    "webpack": "5.71.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
