--- a/package.json
+++ b/package.json
@@ -27,13 +27,8 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
-    "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "dotenv": "^14.2.0",
-    "dotenv-webpack": "^7.0.3",
     "eslint": "8.7.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -44,27 +39,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": ">=4.3.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
-    "mini-css-extract-plugin": "^2.5.2",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
-    "process": "^0.11.10",
-    "react-refresh": "^0.11.0",
-    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.49.0",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "svg-inline-loader": "^0.8.2",
-    "terser-webpack-plugin": "^5.3.0",
-    "ts-loader": "9.2.6",
-    "typescript": "4.5.5",
-    "url-loader": "^4.1.1",
-    "web-vitals": "^2.1.3",
-    "webpack": "5.71.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "typescript": "^4.9.0"
   }
 }
