--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "Project react app",
   "private": "true",
   "scripts": {
-    "start": "webpack serve",
-    "dev": "webpack serve --mode=development",
-    "prod": "webpack serve --mode=production",
-    "build": "webpack --mode=production",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint src/**/*.ts{,x}",
     "types": "tsc --noEmit",
-    "coverage": "tsc",
     "prepare": "husky install",
     "prettier": "prettier --write ."
   },
@@ -29,6 +26,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "8.7.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -39,10 +37,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": ">=4.3.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
-    "sass": "^1.49.0",
-    "typescript": "^4.9.0"
+    "sass": "^1.71.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3"
   }
 }
