--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,25 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "strictNullChecks": true,
-    "noImplicitAny": false,
-    "outDir": "./public/dist",
-    "jsx": "react",
-    "removeComments": true,
-    "sourceMap": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
-    "paths": {
-      "components/*": ["src/components/*"],
-      "reducers/*": ["src/store/reducers/*"],
-      "store/*": ["src/store/*"],
-      "image/*": ["src/image/*"],
-      "scene/*": ["src/scene/*"],
-      "api/*": ["src/api/*"]
-    }
+
+    /* Bundler mode */
+    "moduleResolution": "Bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "./custom.d.ts"],
-  "exclude": ["node_modules/"]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
